k8s/60-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: device-controller
  labels:
    app: device-controller
    app.kubernetes.io/component: device-controller
    app.kubernetes.io/instance: device-controller
    app.kubernetes.io/part-of: device-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-controller
  template:
    metadata:
      labels:
        app: device-controller
        deploymentconfig: device-controller
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: device-controller
          image: >-
            quay.io/mparra/rciots-device-controller:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
