k8s/70-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: device-controller
  labels:
    app: device-controller
    app.kubernetes.io/component: device-controller
    app.kubernetes.io/instance: device-controller
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: device-controller
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-controller
  template:
    metadata:
      labels:
        app: device-controller
        deploymentconfig: device-controller
    spec:
      containers:
        - name: device-controller
          image: >-
            image-registry.openshift-image-registry.svc:5000/${NAMESPACE}/device-controller
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: device-controller
      serviceAccount: device-controller
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
